--- a/css/styles.css
+++ b/css/styles.css
@@ -625,8 +625,16 @@ ul {
 }
 
 .conteiner-email {
+    display: block;
+    
     margin-left: 80px;
-    width: 264px;
+}
+
+.footer-form {
+    display: flex;
+    gap: 24px;
+    position: relative;
+
 }
 
 .footer-text {
@@ -640,7 +648,8 @@ ul {
 }
  
 .footer-email {
-    width: 100%;
+    display: block;
+    width: 264px;
     height: 40px;
     padding-left: 16px;
     padding-top: 8px;
@@ -654,9 +663,7 @@ ul {
     line-height: 1.1;
 }
 
-.footer-email:focus {
-    
-}
+
 
 .footer-email::placeholder {
     font-family: "Roboto", sans-serif;
@@ -666,21 +673,15 @@ ul {
     color: rgda(255, 255, 255, 0.6);
 }
 
-.conteiner-button {
-    display: flex;
-    position: relative;
-    margin-left: 24px;
-    bottom: 0;
-}
 
 .footer-button {
     display: flex;
     align-items: center;
-    
-    width: 168px;
+    top: 0;
+    width: 165px;
     height: 40px;
     padding: 8px 24px;
-    gap: 16px;
+    background-position: center;
     border-radius: 4px;
     background-color: var(--accent-color);
     border-color: var(--accent-color);
@@ -691,18 +692,16 @@ ul {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.06em;
-   margin-top: 40px;
+   
 }
 
-.footer-imput {
+.footer-icon {
     display: block;
     position: absolute;
+    margin: 0;
     top: 50%;
     right: 24px;
-    transform: translate(0, -50%);
-    align-items: center;
-    
-    
+    transform: translate(0, -50%); 
 }
 
 .portfolio-link-overley {
@@ -761,7 +760,7 @@ ul {
     height: 579px;
     background-color: #FCFCFC;
     margin-top: 0;
-    padding-top: 64px;
+    padding-top: 72px;
     padding-bottom: 24px;
     padding-left: 24px;
     padding-right: 24px;
@@ -807,17 +806,22 @@ ul {
     flex-direction: column;
 }
 
+.modal-form-feald {
+    display: block;
+    margin-bottom: 8px;
+}
+
 .modal-form-input {
     width: 100%;
     height: 40px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
     padding-left: 38px;
-    margin-bottom: 8px;
+    
     font-size: 12px;
     line-height: 1.1;
     color: var(--primary-text-color);
-    transform: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition:  border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-form-input:focus {
@@ -826,6 +830,7 @@ ul {
 }
 
 .modal-form-input-dasc {
+    display: block;
     font-family: "Roboto", sans-serif;
     font-size: 12px;
     line-height: 1.1;
@@ -840,7 +845,7 @@ ul {
     top: 50%;
     left: 19px;
     transform: translate(0, -50%);
-    transform: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-form-input:focus + .modal-form-input-icon {
@@ -849,9 +854,15 @@ ul {
 }
 
 .modal-form-input-wrapper {
-    
+    display: block;
     position: relative;
 }
+
+.modal-form-feald-comment {
+    display: block;
+    margin-bottom: 16px;
+}
+
 .modal-form-message {
     width: 100%;
     height: 120px;
@@ -859,8 +870,7 @@ ul {
     padding: 8px 16px;
     border: 1px solid  rgba(33, 33, 33, 0.2);
     border-radius: 4px;
-    transform: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    margin-bottom: 16px;
+    transition:  border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
 }
 
@@ -894,9 +904,14 @@ ul {
 
 .modal-form-check:checked + .modal-form-chack-dasc::before {
     background-image: url(../images/click.svg);
+    display: block;
+    content: "";
+   
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
     border: 1.25px solid #404BBF;
-    justify-content: center;
-    align-items: center;
+    
 }
 
 .modal-form-check:focus + .modal-form-chack-dasc::before {
@@ -914,6 +929,15 @@ ul {
     
 }
 
+.modal-form-link {
+    display: block;
+    font-family: "Roboto", sans-serif;
+    font-size: 12px;
+    line-height: 1.2;
+    letter-spacing: 0.04em;
+    color: var(--accent-color);
+}
+
 .modal-form-submit {
     display: flex;
     flex-direction: row;
@@ -925,7 +949,7 @@ ul {
     padding: 16px 32px;
     border-radius: 4px;
     background-color: var(--accent-color);
-    border-color: var(--accent-color);
+    border-color: transparent;
     color: var(--hero-color);
     cursor: pointer;
     font-family: "Roboto", sans-serif;
@@ -933,7 +957,7 @@ ul {
     font-size: 16px;
     line-height: 1.2;
     letter-spacing: 0.04em;
-    transform: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition:  box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-form-submit:hover,
